@@ -9,6 +9,10 @@
     \itemize{
       \item The \code{std::string_view} type is now covered by \code{wrap()}
       (Lev Kandel in \ghpr{1356} as discussed in \ghit{1357})
+      \item A last remaining \code{DATAPTR} use has been converted to
+      \code{DATAPTR_RO} (Dirk in \ghpr{1359})
+      \item Under R 4.5.0 or later, \code{R_ClosureEnv} is used instead of
+      \code{CLOENV} (Dirk in \ghpr{1361} fixing \ghpr{1360})
     }
     \item Changes in Rcpp Documentation:
     \itemize{
